@@ -1,6 +1,7 @@
 FOF 3.0.10
 ================================================================================
 ~ gh-594 Use the correct numeric field types in scaffolding
++ Blade: @token to get Joomla!'s form token
 
 FOF 3.0.9
 ================================================================================
